@@ -27,7 +27,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
-*
+* [jan] Add browse() method to API to support WebDAV access.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1246,7 +1246,7 @@
    <date>2014-05-06</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
-*
+* [jan] Add browse() method to API to support WebDAV access.
    </notes>
   </release>
  </changelog>
