@@ -2,6 +2,7 @@
 v4.3.0-git
 ----------
 
+[jan] Add browse() method to API to support WebDAV access.
 
 ----------
 v4.2.2
